syntax = "proto3";

package rider.v1;

option go_package = "github.com/lhiradi/ride-handling/proto/rider/v1;riderv1";

service RiderService {
  rpc CreateRider(CreateRiderRequest) returns (CreateRiderResponse);
  rpc GetRider(GetRiderRequest) returns (GetRiderResponse);
}

message CreateRiderRequest {
  string name = 1;
  string phone = 2;
  string email = 3;
  string language = 4;
}

message CreateRiderResponse {
  string rider_id = 1;
}

message GetRiderRequest {
  string rider_id = 1;
}

message GetRiderResponse {
  string name = 1;
  string phone = 2;
  string email = 3;
  string language = 4;
}
